--- a/back-end/pom.xml
+++ b/back-end/pom.xml
@@ -3,6 +3,14 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+
+	<parent>
+		<groupId>net.pladema.hospital</groupId>
+		<artifactId>hospital-parent</artifactId>
+		<version>${revision}</version>
+		<relativePath>../pom-parent.xml</relativePath>
+	</parent>
+	
 	<groupId>net.pladema</groupId>
 	<artifactId>hospital-managment</artifactId>
 	<version>${revision}</version>
@@ -12,9 +20,6 @@
 		<module>hospital-api</module>
 	</modules>
 	<properties>
-		<revision>0.1.0-SNAPSHOT</revision>
-		<spring-boot.version>2.2.6.RELEASE</spring-boot.version>
-		<java.version>1.8</java.version>
 	</properties>
 
 	<dependencyManagement>
