tg-163 Agrego endpoint para User en Backoffice

--- a/dba/liquibase/incrementales-v0_1_3.yml
+++ b/dba/liquibase/incrementales-v0_1_3.yml
@@ -620,3 +620,48 @@ databaseChangeLog:
                 INSERT INTO problem_type VALUES ('439401001', 'Diagnóstico (entidad observable)');
                 INSERT INTO problem_type VALUES ('55607006', 'Problema (hallazgo)');
                 INSERT INTO problem_type VALUES ('57177007', 'Antecedente familiar con contexto explícito (situación)');
+
+- changeSet:
+    id: create_table_password_reset_token
+    author: sperruolo
+    comment: Crea tabla para restablecimineto de contraseñas
+    changes:
+    - createTable:
+        tableName: password_reset_token
+        columns:
+        - column:
+            autoIncrement: true
+            constraints:
+              primaryKey: true
+              primaryKeyName: pk_password_reset_token
+            name: id
+            type: bigint
+        - column:
+            constraints:
+              nullable: false
+            name: token
+            type: varchar(200)
+        - column:
+            constraints:
+              nullable: false
+            name: user_id
+            type: int
+        - column:
+            constraints:
+              nullable: false
+            name: enable
+            type: boolean
+        - column:
+            constraints:
+              nullable: false
+            name: expiry_date            
+            type: datetime
+
+- changeSet:
+    id: addUniqueConstraint-token-password_reset_token
+    author: sperruolo
+    changes:
+    - addUniqueConstraint:
+        tableName: password_reset_token
+        columnNames: token
+        constraintName: UC_token_password_reset_token
