--- a/dba/liquibase/incrementales-v0_1_3.yml
+++ b/dba/liquibase/incrementales-v0_1_3.yml
@@ -422,8 +422,8 @@ databaseChangeLog:
         - sql:
             sql: |-
                 INSERT INTO education_type VALUES (1, 'Auxiliarato');
-                INSERT INTO education_type VALUES (2, '2');
-                INSERT INTO education_type VALUES (3, '3');
+                INSERT INTO education_type VALUES (2, 'Grado Universitario');
+                INSERT INTO education_type VALUES (3, 'Tecnicatura');
 
 - changeSet:
     id: dropColumn-clinical_specialty
