--- a/front-end/webapp/package.json
+++ b/front-end/webapp/package.json
@@ -19,6 +19,7 @@
 		"@angular/core": "~9.0.7",
 		"@angular/forms": "~9.0.7",
 		"@angular/material": "^9.1.3",
+		"@angular/material-moment-adapter": "^9.2.1",
 		"@angular/platform-browser": "~9.0.7",
 		"@angular/platform-browser-dynamic": "~9.0.7",
 		"@angular/router": "~9.0.7",
