tg-186. [BE] Implementar servicios para almacenar vacunas

--- a/dba/liquibase/incrementales-v0_1_3.yml
+++ b/dba/liquibase/incrementales-v0_1_3.yml
@@ -1276,3 +1276,11 @@ databaseChangeLog:
         referencedTableName: institution
         validate: true
 
+- changeSet:        
+    id: dropNotNullConstraint-inmunization-institution_id
+    author: etrapani
+    changes:
+    - dropNotNullConstraint:
+        columnDataType: int
+        columnName: institution_id
+        tableName: inmunization
