tg-205 Flujo login / home / logout

--- a/front-end/webapp/tsconfig.json
+++ b/front-end/webapp/tsconfig.json
@@ -25,6 +25,9 @@
 			"@api-rest/*": [
 				"src/app/modules/api-rest/*"
 			],
+			"@presentation/*": [
+				"src/app/modules/presentation/*"
+			],
 		}
 	},
 	"angularCompilerOptions": {
